# Lofi-Tape-Saturator

./: .gitignore  AUDIO_ROUTING_CHECK.md  BUILD_WINDOWS_VST3.md  CONFIGURAZIONE-COMPLETATA.md  DESIGN_TOKENS_INTEGRATION.md  DISTRIBUTION_GUIDE.md  FIGMA_DISCREPANCIES_ANALYSIS.md  GITHUB_ACTIONS_GUIDE.md  INSTALLAZIONE-WINDOWS.md  README.md  START-HERE.md  VST3_BUILD_GUIDE.md  WINDOWS_QUICK_START.md  build_windows_vst3.bat  index.html  package.json  verify-setup.sh  vite.config.ts
.github/workflows/: build-windows-installer.yml  build-windows-minimal.yml  build-windows-simple.yml  build-windows.yml  build-windows.yml.disabled
IPlugWebUI/: IPlugWebUI.RPP  IPlugWebUI.cpp  IPlugWebUI.h  IPlugWebUI.sln  Lofi Tape Saturator.sln  README.md  config.h
IPlugWebUI.vst3/Contents/: Info.plist
IPlugWebUI.vst3/Contents/MacOS/: IPlugWebUI
IPlugWebUI.vst3/Contents/Resources/web/: index.html
IPlugWebUI.vst3/Contents/Resources/web/assets/: index-C_aJnwtZ.css  index-CsMnlBZt.js
IPlugWebUI/IPlugWebUI.xcworkspace/xcuserdata/endrinhysa.xcuserdatad/: UserInterfaceState.xcuserstate
IPlugWebUI/config/: IPlugWebUI-mac.xcconfig  IPlugWebUI-win.props
IPlugWebUI/projects/: IPlugWebUI-aax.vcxproj  IPlugWebUI-aax.vcxproj.filters  IPlugWebUI-app.vcxproj  IPlugWebUI-app.vcxproj.filters  IPlugWebUI-vst2.vcxproj  IPlugWebUI-vst2.vcxproj.filters  IPlugWebUI-vst3.vcxproj  LofiTapeSaturator-vst3.vcxproj  LofiTapeSaturator-vst3.vcxproj.filters
IPlugWebUI/projects/Lofi Tape Saturator.xcodeproj/: project.pbxproj
IPlugWebUI/projects/Lofi Tape Saturator.xcodeproj/project.xcworkspace/xcuserdata/endrinhysa.xcuserdatad/: UserInterfaceState.xcuserstate
IPlugWebUI/projects/Lofi Tape Saturator.xcodeproj/xcshareddata/xcschemes/: All macOS.xcscheme  VST3.xcscheme  macOS-AAX.xcscheme  macOS-APP with AUv3.xcscheme  macOS-APP.xcscheme  macOS-AUv2.xcscheme  macOS-AUv3.xcscheme  macOS-AUv3Framework.xcscheme  macOS-VST2.xcscheme  macOS-VST3.xcscheme
IPlugWebUI/projects/Lofi Tape Saturator.xcodeproj/xcuserdata/endrinhysa.xcuserdatad/xcschemes/: xcschememanagement.plist
IPlugWebUI/resources/: IPlugWebUI-AU-Info.plist  IPlugWebUI-VST3-Info.plist  LofiTapeSaturator-AAX-Info.plist  LofiTapeSaturator-AU-Info.plist  LofiTapeSaturator-VST2-Info.plist  LofiTapeSaturator-VST3-Info.plist  LofiTapeSaturator-macOS-AUv3-Info.plist  LofiTapeSaturator-macOS-Info.plist  main.rc
IPlugWebUI/resources/web/: index.html
IPlugWebUI/resources/web/assets/: index-mEI70OEm.css
IPlugWebUI/scripts/: package-win.ps1  postbuild-win.bat  prepare_resources-mac.py
installer/: TECHNICAL-SUMMARY.md
installer/windows/: MANUAL-INSTALL-README.txt  README.md  setup.iss
src/: API_REFERENCE.md  App.tsx  AppSimple.tsx  Attached HTML and CSS Context  BUILD_COMMANDS.sh  BUILD_VST3_STEP_BY_STEP.md  FATTO.txt  FIGMA_ASSETS_INFO.md  PROGETTO_PULITO.md  QUICK_START.md  README.md  TestFigmaLayout.tsx  VST_HOST_INTEGRATION.md  global.d.ts  index.css  index.html  keybindings.json  launch.json  main.tsx  package.json  settings.json  tasks.json  vite.config.ts
src/audio/: AudioProcessor.ts
src/components/: AudioInputDemo.tsx  FigmaLayout.tsx  FigmaLayoutComplete.tsx  FigmaLayoutFinal.tsx  FigmaLayoutFixed.tsx  FigmaLayoutNew.tsx  FigmaLayoutProfessional.tsx  Knob.tsx  LoadingScreen.tsx  PresetBrowser.tsx  ResizeControl.tsx  TapeReels.tsx  ToggleSwitch.tsx  VUMeter.tsx
src/figma-assets/: QUICK_REFERENCE.md  README.md  color-palette.json  component-specs.md  gradients-reference.md  typography.md
src/figma-assets/screenshots/: README.md
src/hooks/: useAudioProcessor.ts  useDesignTokens.ts  usePreventFOUC.ts
src/iplug2-templates/: CMakeLists.txt  IntheBox.cpp  IntheBox.h  README.md  SETUP_GUIDE.md  config.h
src/iplug2-templates/build-xcode/: CMakeCache.txt
src/iplug2-templates/resources/web/: index.html
src/iplug2-templates/resources/web/assets/: design-tokens-BQQBbaMM.json  index-DH0JgSME.js
src/styles/: globals.css
src/utils/: parameterFormatters.ts  performance.ts
